Update ConfigEntry.md